Bug 717462 - WebTelephony: notify errors. r=philikon