dom/telephony/TelephonyCall.cpp
@@ -43,6 +43,7 @@
 
 #include "CallEvent.h"
 #include "Telephony.h"
+#include "DOMError.h"
 
 USING_TELEPHONY_NAMESPACE
 
@@ -62,6 +63,7 @@ TelephonyCall::Create(Telephony* aTelephony, const nsAString& aNumber,
   call->mTelephony = aTelephony;
   call->mNumber = aNumber;
   call->mCallIndex = aCallIndex;
+  call->mError = nsnull;
 
   call->ChangeStateInternal(aCallState, false);
 
@@ -153,8 +155,22 @@ TelephonyCall::ChangeStateInternal(PRUint16 aCallState, bool aFireEvents)
 void
 TelephonyCall::NotifyError(const nsAString& aError)
 {
+  // Set the error string
+  NS_ASSERTION(!mError, "Already have an error?");
+
+  mError = DOMError::CreateWithName(aError);
+
   // Do the state transitions
   ChangeStateInternal(nsIRadioInterfaceLayer::CALL_STATE_DISCONNECTED, true);
+
+  // Notify the error event
+  nsRefPtr<CallEvent> event = CallEvent::Create(this);
+  NS_ASSERTION(event, "This should never fail!");
+
+  if (NS_FAILED(event->Dispatch(ToIDOMEventTarget(),
+                                NS_LITERAL_STRING("error")))) {
+    NS_WARNING("Failed to dispatch error event!");
+  }
 }
 
 NS_IMPL_CYCLE_COLLECTION_CLASS(TelephonyCall)
@@ -174,6 +190,7 @@ NS_IMPL_CYCLE_COLLECTION_TRAVERSE_BEGIN_INHERITED(TelephonyCall,
   NS_CYCLE_COLLECTION_TRAVERSE_EVENT_HANDLER(holding)
   NS_CYCLE_COLLECTION_TRAVERSE_EVENT_HANDLER(held)
   NS_CYCLE_COLLECTION_TRAVERSE_EVENT_HANDLER(resuming)
+  NS_CYCLE_COLLECTION_TRAVERSE_EVENT_HANDLER(error)
 NS_IMPL_CYCLE_COLLECTION_TRAVERSE_END
 
 NS_IMPL_CYCLE_COLLECTION_UNLINK_BEGIN_INHERITED(TelephonyCall,
@@ -190,6 +207,7 @@ NS_IMPL_CYCLE_COLLECTION_UNLINK_BEGIN_INHERITED(TelephonyCall,
   NS_CYCLE_COLLECTION_UNLINK_EVENT_HANDLER(holding)
   NS_CYCLE_COLLECTION_UNLINK_EVENT_HANDLER(held)
   NS_CYCLE_COLLECTION_UNLINK_EVENT_HANDLER(resuming)
+  NS_CYCLE_COLLECTION_UNLINK_EVENT_HANDLER(error)
 NS_IMPL_CYCLE_COLLECTION_UNLINK_END
 
 NS_INTERFACE_MAP_BEGIN_CYCLE_COLLECTION_INHERITED(TelephonyCall)
@@ -213,6 +231,13 @@ NS_IMETHODIMP
 TelephonyCall::GetState(nsAString& aState)
 {
   aState.Assign(mState);
+  return NS_OK;
+}
+
+NS_IMETHODIMP
+TelephonyCall::GetError(nsIDOMDOMError** aError)
+{
+  NS_IF_ADDREF(*aError = mError);
   return NS_OK;
 }
 
@@ -296,3 +321,4 @@ NS_IMPL_EVENT_HANDLER(TelephonyCall, disconnected)
 NS_IMPL_EVENT_HANDLER(TelephonyCall, holding)
 NS_IMPL_EVENT_HANDLER(TelephonyCall, held)
 NS_IMPL_EVENT_HANDLER(TelephonyCall, resuming)
+NS_IMPL_EVENT_HANDLER(TelephonyCall, error)
